change page title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <center>
-            <h2>Newest Bitcoin transactions</h2>
+            <h2>Matrix Rain</h2>
             <iframe src="http://ghbtns.com/github-btn.html?user=lhartikk&repo=arnoldc&type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
             <center>
     </div>
